Transform invisible layers that are a part of a group

(don't transform invisible root layer, though)

BUG:393617